--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DIR=xxxx
 # You don't have to fill this if you want to use tensorboard only.
 wandb_api_key=xxxx # go wandb.ai/settings and copy your key
 
-# Number of cores of your cpu, will be used in dataloaders and evluation process pool
+# Number of cores of your cpu, will be used in dataloaders
 NUM_WORKERS=0
 
 HYDRA_FULL_ERROR=1
